fix vertical align

--- a/themes/dljs/source/css/layout.scss
+++ b/themes/dljs/source/css/layout.scss
@@ -288,15 +288,19 @@ body {
         // line-height: 1.45em;
         width: 28%;
 
-        img {
-          max-width:100%;
-          max-height: 105px;
-          // height: auto;
+        .path-img {
+          height: 105px;
+          margin-top: 20px;
+          margin-bottom: 40px;
           display: block;
           margin-left: auto;
           margin-right: auto;
-          margin-top: 20px;
-          margin-bottom: 40px;
+        }
+
+        img {
+          max-width:100%;
+          max-height: 105px;
+
         }
       }
 
